# game-of-life-wgpu

./: Cargo.toml  README.md
src/: app.rs  main.rs  render.rs
src/shaders/: compute.wgsl  render.wgsl
