[package]
name = "game-of-life"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
bytemuck = {version ="1.16.0", features = ["derive"]}
pollster = {version ="0.3.0", features = ["macro"] }
wgpu = "0.20.0"
winit = "0.29.10"
